welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: not enough arguments for method Fairecolonne: (c: Int)Unit.
Unspecified value parameter c.
    Fairecolonne()
                ^ColumnByColumn:24: error: reassignment to val
    c=c+1  
     ^